--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Hello world</h1>
     <nav>
-      <a href="todo.html"></a>
+      <a href="todo.html">Todo!</a>
     </nav>
   </body>
   <script type="text/javascript" src="js/bundle.js"></script>
